# bias-fairness-mvp

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
app/: main.py  routes.md
app/data/: feature_description.json  static_data.parquet  static_predictions.parquet
app/frontend/: index.html  intro.html
app/models/: features.json  mlb_certs.pkl  oh_encoder.pkl  state_label_encoder.pkl  xgb_model.pkl
app/routers/: candidates.py  prediction.py  session.py
app/services/: data_loader.py  prediction_service.py
data/app/: static_data.parquet
data/experiment_results/test/: candidates.csv  manipulations.csv  rounds.csv  sessions.csv
data/interim/: hr_data.parquet  hr_data_simulated.parquet
data/processed/: X_test.parquet  X_train.parquet  hr_data_encoded.parquet  y_test.parquet  y_train.parquet
data/raw/: hr_data.csv
models/: experiment_tracker.csv  features.json  role_certifications.json  role_skills.json  state_label_encoder.pkl  xgb_model.pkl
notebooks/: 01_data_exploration.ipynb  02_data_cleaning.ipynb  03_simulate_additional_information.ipynb  04_encode_data.ipynb  05_train_baseline_model.ipynb  05_train_test_split.ipynb  06_train_baseline_model.ipynb  07_train_xgb_model.ipynb  08_show_metrics.ipynb  09_train_nn.ipynb  10_bias_demonstration.ipynb  10_counterfactual_calculation.ipynb  11_counterfactual_calculation.ipynb  11_create_static_data_for_mvp.ipynb  12_create_feature_description_json.ipynb  12_create_static_data_for_mvp.ipynb  13_create_feature_description_json.ipynb  13_review_predictions.ipynb  14_review_predictions.ipynb  14_run_pipeline.ipynb  15_bias_demonstration.ipynb  15_goodfit_prediction_static_data.ipynb  15_run_pipeline.ipynb  16_bias_demonstration.ipynb  16_goodfit_prediction_static_data.ipynb  17_experiment_data_exploration.ipynb  17_save_test_data.ipynb  18_review_test_data.ipynb
src/: training_utils.py
