[project]
name = "bias-fairness-mvp"
version = "0.1.0"
description = "A project focused on exploring bias and fairness in machine learning."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Markus Kuehnle " }
]
dependencies = [
    "kagglehub>=0.3.6",
    "nbformat>=5.10.4",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "seaborn>=0.13.2",
    "scikit-learn>=1.3.1",
    "matplotlib>=3.7.3",
    "numpy>=1.26.0",
]

[project.urls]
homepage = "https://github.com/yourusername/bias-fairness-mvp"
repository = "https://github.com/yourusername/bias-fairness-mvp"

[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # Define the package directory
