[project]
name = "bias-fairness-mvp"
version = "0.1.0"
description = "A project focused on exploring bias and fairness in machine learning."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Markus Kuehnle " }
]
dependencies = [
    "kagglehub==0.3.6",
    "nbformat==5.10.4",
    "pandas==2.2.3",
    "plotly==5.24.1",
    "seaborn==0.13.2",
    "scikit-learn==1.5.2",
    "matplotlib==3.10.0",
    "numpy==2.0.0",
    "absl-py==2.1.0",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "attrs==24.3.0",
    "category-encoders==2.7.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "cloudpickle==3.1.1",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cramjam==2.9.1",
    "cycler==0.12.1",
    "debugpy==1.8.11",
    "decorator==5.1.1",
    "executing==2.1.0",
    "fastapi==0.115.6",
    "fastjsonschema==2.21.1",
    "fastparquet==2024.11.0",
    "flatbuffers==24.12.23",
    "fonttools==4.55.3",
    "fsspec==2024.12.0",
    "future==1.0.0",
    "gast==0.6.0",
    "google-pasta==0.2.0",
    "grpcio==1.69.0",
    "h11==0.14.0",
    "h5py==3.12.1",
    "hyperopt==0.2.7",
    "idna==3.10",
    "imbalanced-learn==0.13.0",
    "imblearn==0.0",
    "ipykernel==6.29.5",
    "ipython==8.31.0",
    "jedi==0.19.2",
    "joblib==1.4.2",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2024.10.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "keras==3.8.0",
    "keras-tuner==1.4.7",
    "kiwisolver==1.4.8",
    "kt-legacy==1.0.5",
    "libclang==18.1.1",
    "llvmlite==0.43.0",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "ml-dtypes==0.4.1",
    "namex==0.0.8",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "numba==0.60.0",
    "opt-einsum==3.4.0",
    "optree==0.14.0",
    "packaging==24.2",
    "parso==0.8.4",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "prompt-toolkit==3.0.48",
    "protobuf==5.29.3",
    "psutil==6.1.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py4j==0.10.9.9",
    "pyarrow==18.1.0",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pygments==2.19.0",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pyzmq==26.2.0",
    "referencing==0.35.1",
    "requests==2.32.3",
    "rich==13.9.4",
    "rpds-py==0.22.3",
    "scipy==1.15.1",
    "setuptools==75.8.0",
    "shap==0.46.0",
    "six==1.17.0",
    "sklearn-compat==0.1.3",
    "slicer==0.0.8",
    "sniffio==1.3.1",
    "stack-data==0.6.3",
    "starlette==0.41.3",
    "statsmodels==0.14.4",
    "tenacity==9.0.0",
    "tensorboard==2.18.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.18.0",
    "termcolor==2.5.0",
    "threadpoolctl==3.5.0",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "tzdata==2024.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "wheel==0.45.1",
    "wrapt==1.17.2",
    "xgboost==2.1.3",
]

[project.urls]
repository = "https://github.com/markuskuehnle/bias-fairness-mvp"

[build-system]
requires = ["setuptools>=67.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]  # Define the package directory
